--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,10 @@ body {
   align-items: center;
   z-index: 2;
 }
-
+.nav--up {
+  background-color: #fff;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
+}
 .link {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.86);
@@ -101,11 +104,13 @@ body {
   border: none;
 }
 
+.main {
+  background-color: whitesmoke;
+}
 .container {
   position: relative;
   width: 100%;
   height: 100vh;
-  background-color: rgba(255, 255, 255, 0.89);
   display: flex;
 }
 
@@ -123,6 +128,7 @@ body {
 }
 .hero {
   height: 40vh;
+  margin-bottom: 5vh;
 }
 .hero-head {
   font-family: "Coalation";
@@ -146,17 +152,33 @@ body {
 /* end buttons */
 
 .social-icons {
-  width: 120px;
+  width: 100px;
   height: 55px;
   display: flex;
   justify-content: space-between;
-  margin-top: 50px;
+  margin-bottom: 2rem;
 }
 
 .icon {
-  width: 30px;
-  height: 30px;
+  width: 20px;
+  height: 20px;
   border-radius: 50%;
   /* background-color: #636363; */
   display: block;
+}
+.card {
+  background-color: #fff;
+  box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
+  margin: auto;
+}
+.card--overlap {
+  width: 80vw;
+  height: 90vh;
+
+  margin-top: -10vh;
+  padding: calc(var(--mn-pad) / 1.5);
+}
+.sect-head {
+  font-size: 1.8rem;
+  margin-bottom: 1rem;
 }
