--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,8 @@
   --gold: rgb(110, 96, 12);
   --navy: rgb(29, 29, 73);
   --gray: #575757;
-  --base: #fff;
+  --base: hsl(0, 0%, 98%);
+  --light: hsl(0, 0%, 100%);
 
   --mn-pad: 139px;
   --nav-height: 10vh;
@@ -14,6 +15,10 @@
   padding: 0;
   box-sizing: border-box;
   transition: 0.4s all ease-out;
+}
+a {
+  text-decoration: none;
+  color: var(--blue);
 }
 
 html {
@@ -34,14 +39,29 @@ body {
   overflow: hidden;
   scroll-behavior: smooth;
 }
+/* #REGION IMAGES */
+.img {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+.img--bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  filter: grayscale(1) opacity(0.2) brightness(0.5);
+  z-index: -1;
+}
+/* #END-REGION IMAGES */
 
+/* #REGION DECORATIVE */
 .stripes {
   position: absolute;
   width: 60vw;
   height: 600vh;
   right: -30vw;
   top: -250vh;
-
+  opacity: 0.8;
   background-color: var(--purple);
   transform: skew(-45deg);
 }
@@ -62,7 +82,20 @@ body {
   height: 100%;
   background-color: var(--gold);
 }
+/* #END-REGION DECORATIVE */
 
+/* #REGION CONTROLS */
+.btn {
+  padding: 1rem 2rem;
+  margin: 1rem 0;
+  cursor: pointer;
+  border: none;
+  outline: none;
+}
+.btn--primary {
+  background-color: orange;
+}
+/* #END-REGION CONTROLS */
 .nav--top {
   position: fixed;
   width: 100%;
@@ -74,7 +107,7 @@ body {
   z-index: 2;
 }
 .nav--up {
-  background-color: #fff;
+  background-color: var(--light);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 }
 .link {
@@ -105,12 +138,13 @@ body {
 }
 
 .main {
-  background-color: whitesmoke;
+  position: relative;
 }
 .container {
   position: relative;
   width: 100%;
   height: 100vh;
+  background-color: var(--base);
   display: flex;
 }
 
@@ -167,7 +201,7 @@ body {
   display: block;
 }
 .card {
-  background-color: #fff;
+  background-color: var(--base);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
   margin: auto;
 }
@@ -175,11 +209,11 @@ body {
   position: relative;
   --p: calc(var(--mn-pad) / 1.5);
 
-  width: 80vw;
-  height: 100vh;
+  width: 100vw;
+  height: 85vh;
 
   margin-top: -10vh;
-  padding: var(--p);
+  padding: 4rem var(--p);
 }
 .sect-head {
   font-size: 1.8rem;
@@ -187,14 +221,12 @@ body {
   text-align: center;
 }
 .hr-list {
-  display: grid;
   position: absolute;
   bottom: var(--p);
-  grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1fr;
-  /* grid-gap: 3rem; */
   width: inherit;
   height: 50vh;
+
+  display: flex;
   margin-top: 2rem;
   margin-left: calc(var(--p) * -1);
   padding: 0 var(--p);
@@ -203,6 +235,7 @@ body {
 .card--info {
   position: relative;
   padding: 0;
+  width: 45%;
   height: 100%;
   overflow: hidden;
   padding: 36px;
@@ -217,6 +250,9 @@ details {
   margin-top: 9px;
   margin-bottom: 24px;
 }
+details::before {
+  display: none;
+}
 .link--more {
   font-weight: 400;
 }
@@ -227,4 +263,28 @@ details {
   width: 110%;
   height: 110%;
   z-index: -1;
+}
+footer {
+  position: sticky;
+  width: 100%;
+  padding: 4rem var(--mn-pad);
+  background-color: var(--base);
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: start;
+  grid-gap: 4rem;
+  bottom: 0;
+  z-index: 10;
+}
+.footer__group {
+  display: flex;
+  flex-direction: column;
+  align-items: start;
+}
+.footer__head {
+  margin-bottom: 0.8rem;
+  color: var(--navy);
+}
+.footer__item {
+  margin: 0.1rem 0;
 }
