--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,9 @@
 :root {
-  --purple: rgb(61, 9, 61);
-  --gold: rgb(110, 96, 12);
+  --purple: rgb(62, 9, 62);
+  --gold: rgb(204, 179, 34);
   --navy: rgb(29, 29, 73);
   --gray: #575757;
-  --base: hsl(0, 0%, 98%);
+  --base: hsl(0, 0%, 95%);
   --light: hsl(0, 0%, 100%);
 
   --mn-pad: 139px;
@@ -16,11 +16,6 @@
   box-sizing: border-box;
   transition: 0.4s all ease-out;
 }
-a {
-  text-decoration: none;
-  color: var(--blue);
-}
-
 html {
   width: 100%;
   font-family: "Poppins";
@@ -39,6 +34,18 @@ body {
   overflow: hidden;
   scroll-behavior: smooth;
 }
+
+/* #REGION TYPOGRAPHY */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: var(--navy) !important;
+}
+/* #END-REGION TYPOGRAPHY */
+
 /* #REGION IMAGES */
 .img {
   object-fit: cover;
@@ -69,7 +76,7 @@ body {
 .stripes::before {
   content: "";
   position: absolute;
-  width: 10vw;
+  width: 2vw;
   height: 100%;
   background-color: var(--navy);
   margin-left: -1rem;
@@ -78,23 +85,40 @@ body {
 .stripes::after {
   content: "";
   position: absolute;
-  width: 10vw;
+  width: 5vw;
   height: 100%;
   background-color: var(--gold);
 }
 /* #END-REGION DECORATIVE */
 
-/* #REGION CONTROLS */
+/* #REGION CONTROL */
+a {
+  text-decoration: none;
+  color: var(--navy);
+}
+.nav__links .link {
+  padding: 0 25px;
+  border-right: 2px solid;
+}
+.nav__links .link {
+  border-left-color: rgba(0, 0, 0, 0.86);
+}
+.nav__links .link:nth-last-child(1) {
+  border: none;
+}
 .btn {
   padding: 1rem 2rem;
   margin: 1rem 0;
+  padding: 1rem 2rem;
   cursor: pointer;
   border: none;
   outline: none;
+  cursor: pointer;
 }
 .btn--primary {
-  background-color: orange;
+  background-color: var(--gold);
 }
+/* #REGION CONTROLS */
 /* #END-REGION CONTROLS */
 .nav--top {
   position: fixed;
@@ -110,11 +134,6 @@ body {
   background-color: var(--light);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 }
-.link {
-  text-decoration: none;
-  color: rgba(0, 0, 0, 0.86);
-  opacity: 0.86;
-}
 
 .logo {
   font-size: 1.2em;
@@ -125,29 +144,21 @@ body {
   display: grid;
   grid-auto-flow: column;
 }
-.nav__links .link {
-  font-family: "Poppins";
-  padding: 0 25px;
-  border-right: 2px solid;
-}
-.nav__links .link {
-  border-left-color: rgba(0, 0, 0, 0.86);
-}
-.nav__links .link:nth-last-child(1) {
-  border: none;
-}
 
 .main {
   position: relative;
 }
 .container {
-  position: relative;
+  position: sticky;
   width: 100%;
   height: 100vh;
   background-color: var(--base);
   display: flex;
+  padding: calc(var(--mn-pad) / 2.5) var(--mn-pad);
 }
-
+.container--short {
+  height: 70vh;
+}
 #header {
   padding-left: var(--mn-pad);
   padding-bottom: calc(var(--mn-pad) / 2.5);
@@ -190,7 +201,7 @@ body {
   height: 55px;
   display: flex;
   justify-content: space-between;
-  margin-bottom: 2rem;
+  margin-bottom: 8vh;
 }
 
 .icon {
@@ -201,43 +212,53 @@ body {
   display: block;
 }
 .card {
-  background-color: var(--base);
+  background-color: var(--light);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
-  margin: auto;
 }
 .card--overlap {
   position: relative;
   --p: calc(var(--mn-pad) / 1.5);
-
-  width: 100vw;
+  display: flex;
+  width: calc(100vw - var(--mn-pad));
+  top: -10vh;
   height: 85vh;
-
-  margin-top: -10vh;
+  margin-top: -6vh;
   padding: 4rem var(--p);
 }
-.sect-head {
+.head-text {
+  position: relative;
+  width: 100%;
   font-size: 1.8rem;
   margin-bottom: 1rem;
   text-align: center;
+  display: flex;
+  justify-content: center;
+}
+.head-text::before {
+  content: "";
+  position: absolute;
+  background-color: var(--gold);
+  width: 4rem;
+  height: 2px;
+  top: -2rem;
 }
 .hr-list {
   position: absolute;
   bottom: var(--p);
-  width: inherit;
+  width: calc(100% - var(--p) * 2);
   height: 50vh;
 
-  display: flex;
-  margin-top: 2rem;
-  margin-left: calc(var(--p) * -1);
-  padding: 0 var(--p);
+  display: grid;
+  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr;
+  grid-gap: 2rem;
   align-items: center;
 }
 .card--info {
   position: relative;
-  padding: 0;
-  width: 45%;
   height: 100%;
   overflow: hidden;
+  width: 100%;
   padding: 36px;
   display: flex;
   flex-direction: column;
@@ -247,11 +268,47 @@ body {
   z-index: 1;
 }
 details {
+  position: relative;
   margin-top: 9px;
   margin-bottom: 24px;
 }
-details::before {
+details summary::-webkit-details-marker {
   display: none;
+  list-style-type: none;
+}
+details summary {
+  position: relative;
+  outline: none !important;
+  cursor: pointer;
+}
+details[open] summary {
+  background-color: #ddd;
+}
+details summary::before {
+  position: absolute;
+  content: "";
+  left: -2rem;
+  top: 0;
+  width: 4px;
+  height: 40px;
+  background-color: black;
+}
+details:not([open]) summary::before {
+  background-color: var(--gold);
+}
+details[open] summary ~ * {
+  animation: show 1s forwards;
+}
+
+@keyframes show {
+  from {
+    opacity: 0;
+    transform: translateY(-2%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
 .link--more {
   font-weight: 400;
@@ -287,4 +344,45 @@ footer {
 }
 .footer__item {
   margin: 0.1rem 0;
+}
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  width: calc(100vw - var(--mn-pad) * 2);
+  height: 60vh;
+  background-color: var(--light);
+  padding: 4rem;
+  display: grid;
+
+  border: none;
+  transform: translate(-50%, -50%);
+}
+.modal:not([open]) {
+  opacity: 0;
+}
+.modal[open] {
+  z-index: 9999;
+  opacity: 1;
+  animation: fadeIn 400ms;
+}
+.modal::backdrop {
+  background-image: linear-gradient(
+    45deg,
+    rgba(62, 9, 62, 0.5),
+    rgba(204, 179, 34, 0.5)
+  );
+}
+.modal__head {
+  text-align: left;
+}
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    margin-top: 3rem;
+  }
+  to {
+    opacity: 1;
+    margin-top: 0;
+  }
 }
