--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,7 +6,7 @@
   --base: hsl(0, 0%, 95%);
   --light: hsl(0, 0%, 100%);
 
-  --mn-pad: 139px;
+  --mn-pad: 10vw;
   --nav-height: 10vh;
 }
 
@@ -125,13 +125,13 @@ a:hover {
 .btn--primary {
   background-color: var(--gold);
 }
-.btn--modal{
+.btn--modal {
   background-color: var(--base);
-  color: var(--navy)
+  color: var(--navy);
 }
-.btn--modal:hover{
+.btn--modal:hover {
   background-color: var(--navy);
-  color: var(--gold)
+  color: var(--gold);
 }
 .link {
   text-transform: uppercase;
@@ -184,12 +184,17 @@ a:hover {
   justify-content: flex-end;
   background-color: transparent;
 }
-#services,
 #team {
-  flex-direction: column;
   padding-left: 0;
   padding-right: 0;
+}
+#team,
+#services {
+  flex-direction: column;
   height: 80vh;
+}
+#services {
+  height: 100vh;
 }
 #services::before,
 #services::after {
@@ -213,25 +218,108 @@ a:hover {
   height: 60vh;
   margin-top: 2rem;
   align-content: center;
-  display: grid;
-  grid-auto-flow: column;
-  grid-template: 1fr / repeat(4, 1fr);
-  grid-gap: 16px;
-  overflow-x: auto;
+  display: flex;
+  grid-gap: 18px;
+  /* background-color: red; */
+}
+.service-list:hover .service:not(:hover) {
+  filter: blur(1px) brightness(0.9);
 }
 .service {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  position: relative;
   display: flex;
+  background-color: var(--gold);
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  transform: scale(0.98);
+  border: 1px solid rgba(0, 0, 0, 0.328);
+
   overflow: hidden;
 }
+.service:hover {
+  margin: 0 1rem;
+  transform: scale(1.01);
+  /* transition-delay: 200ms; */
+  box-shadow: 0 0 24px 10px rgba(255, 191, 40, 0.527);
+  z-index: 1;
+}
+.service::before {
+  content: "";
+  width: 80%;
+  height: 80%;
+  background-color: transparent;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  /* background-color: var(--gold); */
+  border: 4px solid var(--navy);
+  z-index: 10;
+}
+.service:hover::before{
+  opacity: .56;
+  background: var(--navy) !important;
+}
+.service:hover .service__name{
+  color: yellow;
+  z-index: 10;
+}
+.service__stripe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: pink;
+  width: 100%;
+  height: 100%;
+}
+.service__stripe::after {
+  content: "";
+  position: absolute;
+  top: -10%;
+  left: -60%;
+  width: 30%;
+  height: 120%;
+  opacity: 0.8;
+  outline: 1px solid;
+  background-color: var(--purple);
+  transform: skew(-45deg) scale(0);
+  z-index: 2;
+}
+.service:hover .service__stripe::after {
+  transform: skew(-45deg) scale(1);
+}
+.service__stripe::after {
+  left: unset;
+  right: -60%;
+  background-color: var(--gold);
+}
 .service__img {
-  width: 70%;
-  height: 70%;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  opacity: 0.46;
+  filter: blur(0) grayscale(0.96) brightness(0.8);
+  background-color: var(--gold);
+}
+.service:hover .service__img {
+  opacity: 1;
+  filter: blur(0px) grayscale(0) brightness(1);
+}
+.service__name {
+  color: var(--navy);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1.4rem;
+  opacity: 0.86;
+  z-index: 10;
 }
 #team {
-  height: 80vh;
+  height: 90vh;
 }
 .team--card {
   position: relative;
@@ -267,7 +355,7 @@ a:hover {
   z-index: 10;
 }
 .member:hover .member__img {
-  filter: brightness(0.8);
+  filter: blur(0) brightness(0.8);
 }
 .member__img {
   position: absolute;
@@ -284,6 +372,9 @@ a:hover {
 .member:nth-of-type(even) {
   margin-left: -30%;
   clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
+}
+.team--card:hover .member:not(:hover) {
+  filter: blur(1px) brightness(0.4);
 }
 .trapez {
   clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
@@ -321,34 +412,35 @@ a:hover {
   margin-top: 0.5rem;
 }
 #contact {
-  height: 50vh;
+  height: 65vh;
   flex-direction: column;
 }
 .form {
   position: relative;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  margin-top: 2rem;
+  display: grid;
+  grid-template: 1fr 1fr / 1fr;
+  justify-content: center;
   width: 100%;
-  height: 6rem;
+  height: 8rem;
+  background-color: red;
 }
 .input {
-  width: 80%;
-  height: 100%;
   outline: none;
+  margin: 0;
+  padding: 0;
   background-color: var(--light);
   border: 2px solid var(--navy);
-  margin-top: 2rem;
   text-indent: 16px;
+  border-bottom: none;
 }
 .form__submit {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  transform: translateY(-50%);
-  width: 20%;
-  height: 4rem;
+  margin: 0;
+  padding: 0;
+  height: 100%;
+  width: 100%;
   border: 2px var(--navy) solid;
+  border-top: none;
 }
 .header-text {
   font-size: 28px;
@@ -423,12 +515,14 @@ a:hover {
   text-align: center;
   display: flex;
   justify-content: center;
+
+  font-weight: bold;
 }
 .head-text::before {
   content: "";
   position: absolute;
   background-color: var(--gold);
-  width: 4rem;
+  width: 3rem;
   height: 2px;
   top: -1rem;
 }
