--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,7 @@
   --light: hsl(0, 0%, 100%);
 
   --mn-pad: 10vw;
+  --sm-pad: 4rem;
   --nav-height: 10vh;
 }
 
@@ -19,7 +20,7 @@
 html {
   width: 100%;
   font-family: "Poppins";
-  font-weight: 300;
+  font-weight: 400;
   overflow-x: hidden;
 
   font-size: 16px;
@@ -241,6 +242,7 @@ a:hover {
 
   overflow: hidden;
 }
+.service--active,
 .service:hover {
   margin: 0 1rem;
   transform: scale(1.01);
@@ -257,16 +259,17 @@ a:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  /* background-color: var(--gold); */
+  background-color: var(--navy);
   border: 4px solid var(--navy);
+  opacity: 0.56;
   z-index: 10;
 }
-.service:hover::before{
-  opacity: .56;
+.service--active::before,
+.service:hover::before {
   background: var(--navy) !important;
 }
-.service:hover .service__name{
-  color: yellow;
+.service--active .service__name,
+.service:hover .service__name {
   z-index: 10;
 }
 .service__stripe {
@@ -290,6 +293,7 @@ a:hover {
   transform: skew(-45deg) scale(0);
   z-index: 2;
 }
+.service--active .service__stripe::after,
 .service:hover .service__stripe::after {
   transform: skew(-45deg) scale(1);
 }
@@ -302,19 +306,20 @@ a:hover {
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0.46;
+  opacity: 0.86;
   filter: blur(0) grayscale(0.96) brightness(0.8);
   background-color: var(--gold);
 }
+.service--active .service__img,
 .service:hover .service__img {
   opacity: 1;
   filter: blur(0px) grayscale(0) brightness(1);
 }
 .service__name {
-  color: var(--navy);
+  color: yellow;
   text-transform: uppercase;
   font-weight: bold;
-  font-size: 1.4rem;
+  font-size: 1var (--sm-pad);
   opacity: 0.86;
   z-index: 10;
 }
@@ -336,7 +341,7 @@ a:hover {
   display: grid;
   align-items: end;
   cursor: pointer;
-  padding: 4rem;
+  padding: var(--sm-pad);
   z-index: 1;
   box-shadow: 0 0 16px 10px rgba(255, 205, 42, 1);
 }
@@ -458,7 +463,7 @@ a:hover {
 }
 
 .hero-head {
-  font-size: 4rem;
+  font-size: var(--sm-pad);
   width: 40vw;
   margin-bottom: 0;
 }
@@ -505,7 +510,7 @@ a:hover {
   top: -10vh;
   height: 85vh;
   margin-top: -6vh;
-  padding: 4rem var(--p);
+  padding: var(--sm-pad) var(--p);
 }
 .head-text {
   position: relative;
@@ -534,10 +539,10 @@ a:hover {
   padding: 0;
 }
 .hr-list {
-  position: absolute;
   bottom: var(--p);
-  width: calc(100% - var(--p) * 2);
+  width: 100%;
   height: 50vh;
+  margin-top: 2rem;
 
   display: grid;
   grid-auto-flow: column;
@@ -629,12 +634,12 @@ details[open] summary ~ * {
 footer {
   position: sticky;
   width: 100%;
-  padding: 4rem var(--mn-pad);
+  padding: var(--sm-pad) var(--mn-pad);
   background-color: var(--light);
   display: grid;
   grid-auto-flow: column;
   justify-content: start;
-  grid-gap: 4rem;
+  grid-gap: var(--sm-pad);
   bottom: 0;
   z-index: 10;
 }
@@ -657,7 +662,7 @@ footer {
   width: calc(100vw - var(--mn-pad) * 6);
   height: 60vh;
   background-color: var(--light);
-  padding: 4rem;
+  padding: var(--sm-pad);
   display: grid;
 
   border: none;
@@ -681,6 +686,48 @@ footer {
 }
 .modal__head {
   text-align: left;
+}
+@media screen and (max-width: 678px) {
+  :root {
+    --mn-pad: 6vw;
+  }
+  .service-list {
+    height: 100vh;
+    flex-direction: column;
+  }
+  .service {
+    transform-origin: center;
+  }
+  .service:hover {
+    transform-origin: center;
+    transform: none;
+  }
+  #team {
+    height: 120vh;
+    padding: var(--sm-pad) 0;
+  }
+  .team--card {
+    height: 80%;
+    grid-auto-flow: row;
+    grid-template: 1fr 1fr / 1fr;
+    grid-gap: 0;
+  }
+  .member {
+    clip-path: none !important;
+    margin: none;
+    overflow: hidden;
+    box-shadow: none;
+  }
+  .member:nth-of-type(even) {
+    margin-left: -2rem;
+  }
+  .member__details {
+    width: 100%;
+  }
+  .member__details::before {
+    left: -4rem;
+    width: 300%;
+  }
 }
 @keyframes fadeIn {
   from {
