--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -9,6 +9,8 @@
   --mn-pad: 10vw;
   --sm-pad: 4rem;
   --nav-height: 10vh;
+
+  --yellow-shadow: 0 0 24px 10px rgba(255, 191, 40, 0.527);
 }
 
 * {
@@ -102,6 +104,8 @@ a {
   text-decoration: none;
   color: var(--navy);
   font-weight: 500;
+  display: flex;
+  align-items: center;
 }
 a:hover {
   color: var(--gold);
@@ -247,7 +251,7 @@ a:hover {
   margin: 0 1rem;
   transform: scale(1.01);
   /* transition-delay: 200ms; */
-  box-shadow: 0 0 24px 10px rgba(255, 191, 40, 0.527);
+  box-shadow: var(--yellow-shadow);
   z-index: 1;
 }
 .service::before {
@@ -261,6 +265,7 @@ a:hover {
   transform: translate(-50%, -50%);
   background-color: var(--navy);
   border: 4px solid var(--navy);
+
   opacity: 0.56;
   z-index: 10;
 }
@@ -306,7 +311,7 @@ a:hover {
   position: absolute;
   width: 100%;
   height: 100%;
-  opacity: 0.86;
+  opacity: 0.56;
   filter: blur(0) grayscale(0.96) brightness(0.8);
   background-color: var(--gold);
 }
@@ -315,13 +320,37 @@ a:hover {
   opacity: 1;
   filter: blur(0px) grayscale(0) brightness(1);
 }
+.center {
+  position: absolute;
+  translate: translate(-50%, -50%);
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 .service__name {
   color: yellow;
   text-transform: uppercase;
+  font-size: 1.3rem;
+  letter-spacing: 2px;
   font-weight: bold;
   font-size: 1var (--sm-pad);
+  margin: 0.5rem 0;
   opacity: 0.86;
   z-index: 10;
+}
+.service--more {
+  width: 5rem;
+  text-align: center;
+  font-size: 1rem;
+  opacity: 0;
+  color: var(--light);
+  background-color: var(--navy) !important;
+}
+.service--active .service--more,
+.service:hover .service--more {
+  opacity: 1;
 }
 #team {
   height: 90vh;
@@ -387,7 +416,8 @@ a:hover {
 }
 .member__details {
   position: relative;
-  color: var(--light);
+  color: rgba(255, 255, 255, 0.86);
+  font-weight: 300;
   width: 60%;
   height: 7rem;
   z-index: 1;
@@ -414,6 +444,8 @@ a:hover {
   margin-bottom: 1rem;
 }
 .member__qoute {
+  opacity: 0.86;
+  font-weight: 300;
   margin-top: 0.5rem;
 }
 #contact {
@@ -556,12 +588,17 @@ a:hover {
   overflow: hidden;
   width: 100%;
   padding: 36px;
+  outline: 1px solid rgba(0, 0, 0, 0.274);
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
 
   box-shadow: none;
   z-index: 1;
+}
+.card--info:hover .card__img {
+  filter: grayscale(0.8) brightness(1) blur(0);
+  opacity: 0.2;
 }
 details {
   position: relative;
@@ -629,6 +666,9 @@ details[open] summary ~ * {
   left: -24px;
   width: 110%;
   height: 110%;
+  filter: grayscale(0.9) brightness(1.1) blur(1px);
+  outline: 1px solid var(--navy);
+  opacity: 0.16;
   z-index: -1;
 }
 footer {
