--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -177,14 +177,14 @@ a:hover {
   height: 100vh;
   background-color: var(--base);
   display: flex;
-  padding: calc(var(--mn-pad) / 2.5) var(--mn-pad);
+  padding: var(--sm-pad) var(--mn-pad);
 }
 .container--short {
   height: 85vh;
 }
 #header {
   padding-left: var(--mn-pad);
-  padding-bottom: calc(var(--mn-pad) / 2.5);
+  padding-bottom: var(--sm-pad);
   flex-direction: column;
   justify-content: flex-end;
   background-color: transparent;
@@ -458,25 +458,27 @@ a:hover {
   display: grid;
   grid-template: 1fr 1fr / 1fr;
   justify-content: center;
+  border: 1px solid rgba(0, 0, 0, 0.328);
+  padding: 1px;
   width: 100%;
   height: 8rem;
-  background-color: red;
 }
 .input {
   outline: none;
+  border: none;
   margin: 0;
   padding: 0;
   background-color: var(--light);
-  border: 2px solid var(--navy);
   text-indent: 16px;
   border-bottom: none;
 }
 .form__submit {
+  outline: none;
+  border: none;
   margin: 0;
   padding: 0;
   height: 100%;
   width: 100%;
-  border: 2px var(--navy) solid;
   border-top: none;
 }
 .header-text {
@@ -730,6 +732,15 @@ footer {
 @media screen and (max-width: 678px) {
   :root {
     --mn-pad: 6vw;
+  }
+  .card--overlap {
+    height: 100vh;
+  }
+  .hr-list {
+    flex-direction: column;
+    grid-auto-flow: row;
+    grid-template: 1fr 1fr/ 1fr;
+    height: 100%;
   }
   .service-list {
     height: 100vh;
