--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ html {
   font-weight: 400;
   overflow-x: hidden;
 
-  font-size: 15px;
+  font-size: 14px;
 
   scroll-behavior: smooth;
 }
@@ -112,7 +112,7 @@ a:hover {
 }
 .nav__links .link {
   position: relative;
-  padding: 0.5rem 1rem;
+  padding: 0.5rem 2rem;
 }
 .link:hover {
   background-color: var(--navy);
@@ -556,6 +556,7 @@ a:hover {
   justify-content: center;
 
   font-weight: bold;
+  text-align: center !important; 
 }
 .head-text::before {
   content: "";
@@ -733,7 +734,48 @@ footer {
   :root {
     --mn-pad: 6vw;
   }
-  .card__head{
+  .stripes{
+    width: 82vw;
+    right: -96vw;
+  }
+  .menu {
+    position: absolute;
+    display: block;
+    width: 35px;
+    height: 35px;
+    background-color: #000;
+    right: 0;
+    z-index: 10;
+    border: 2px green solid;
+  }
+  .nav__links {
+    position: absolute;
+    right: 0;
+    top: var(--nav-height);
+    grid-auto-flow: row;
+    background-color: var(--light);
+    transform: scaleY(0);
+    transform-origin: top;
+  }
+  .menu::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: green;
+  }
+  .menu:checked::before {
+    background-color: orange;
+  }
+  .menu:checked {
+    background-color: red;
+  }
+  .menu:checked + .nav__links {
+    transform: scaleY(1) !important;
+  }
+  .card__head {
     font-size: 1.4rem;
   }
   .details {
@@ -822,6 +864,17 @@ footer {
     left: -4rem;
     height: 400%;
     width: 300%;
+  }
+  footer{
+    font-size: 13px;
+    grid-gap: 1rem !important;
+  }
+  .footer__group > *{
+    display: grid;
+    grid-template-columns: 14px 1fr;
+  }
+  .footer__group:first-child{
+    display: none
   }
 }
 @keyframes fadeIn {
