--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -141,6 +141,9 @@ a:hover {
 .link {
   text-transform: uppercase;
 }
+.menu {
+  display: none;
+}
 /* #REGION CONTROLS */
 /* #END-REGION CONTROLS */
 .nav--top {
@@ -199,7 +202,7 @@ a:hover {
   height: 80vh;
 }
 #services {
-  height: 100vh;
+  height: 90vh;
 }
 #services::before,
 #services::after {
@@ -556,7 +559,7 @@ a:hover {
   justify-content: center;
 
   font-weight: bold;
-  text-align: center !important; 
+  text-align: center !important;
 }
 .head-text::before {
   content: "";
@@ -691,9 +694,19 @@ footer {
   flex-direction: column;
   align-items: start;
 }
+.footer__group > * {
+  display: grid;
+  grid-template-columns: 2rem 1fr;
+  justify-content: center;
+}
+
 .footer__head {
+  display: flex;
+  justify-content: start;
+  width: 100%;
   margin-bottom: 0.8rem;
   color: var(--navy);
+  text-align: left;
 }
 .footer__item {
   margin: 0.1rem 0;
@@ -734,19 +747,21 @@ footer {
   :root {
     --mn-pad: 6vw;
   }
-  .stripes{
+  .stripes {
     width: 82vw;
     right: -96vw;
   }
   .menu {
     position: absolute;
     display: block;
-    width: 35px;
-    height: 35px;
-    background-color: #000;
-    right: 0;
+    width: 25px;
+    height: 25px;
+    background: var(--light);
+    outline: none;
+    border: none;
+    appearance: none;
+    right: var(--mn-pad);
     z-index: 10;
-    border: 2px green solid;
   }
   .nav__links {
     position: absolute;
@@ -764,10 +779,13 @@ footer {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: green;
+    background-color: var(--light);
+    background-image: url(https://img.icons8.com/ios-filled/50/000000/menu.png);
+    background-repeat: no-repeat;
+    background-size: cover;
   }
   .menu:checked::before {
-    background-color: orange;
+    background: url(https://img.icons8.com/material-sharp/24/000000/delete-sign.png);
   }
   .menu:checked {
     background-color: red;
@@ -865,16 +883,16 @@ footer {
     height: 400%;
     width: 300%;
   }
-  footer{
-    font-size: 13px;
+  footer {
+    font-size: 12px;
     grid-gap: 1rem !important;
+    place-content: center;
   }
-  .footer__group > *{
-    display: grid;
-    grid-template-columns: 14px 1fr;
+  .footer__head {
+    width: 100%;
   }
-  .footer__group:first-child{
-    display: none
+  .footer__group:first-child {
+    display: none;
   }
 }
 @keyframes fadeIn {
