--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,13 +110,13 @@ a {
 a:hover {
   color: var(--gold);
 }
-.logo{
+.logo {
   position: relative;
   background-color: transparent !important;
   z-index: 1;
 }
-.logo:hover{
-  transform: scale(1.1)
+.logo:hover {
+  transform: scale(1.1);
 }
 .nav__links .link {
   position: relative;
@@ -239,7 +239,7 @@ a:hover {
   /* background-color: red; */
 }
 .service-list:hover .service:not(:hover) {
-  filter: blur(1px) brightness(0.9);
+  filter: brightness(0.9);
 }
 .service {
   position: relative;
@@ -252,7 +252,7 @@ a:hover {
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  transform: scale(0.98);
+  transform: scale(1);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 
   overflow: hidden;
@@ -260,7 +260,7 @@ a:hover {
 .service--active,
 .service:hover {
   margin: 0 1rem;
-  transform: scale(1.01);
+  transform: scale(1.06);
   /* transition-delay: 200ms; */
   box-shadow: var(--yellow-shadow);
   z-index: 1;
@@ -288,47 +288,18 @@ a:hover {
 .service:hover .service__name {
   z-index: 10;
 }
-.service__stripe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: pink;
-  width: 100%;
-  height: 100%;
-}
-.service__stripe::after {
-  content: "";
-  position: absolute;
-  top: -10%;
-  left: -60%;
-  width: 30%;
-  height: 120%;
-  opacity: 0.8;
-  background-color: var(--purple);
-  transform: skew(-45deg) scale(0);
-  z-index: 2;
-}
-.service--active .service__stripe::after,
-.service:hover .service__stripe::after {
-  transform: skew(-45deg) scale(1);
-}
-.service__stripe::after {
-  left: unset;
-  right: -60%;
-  background-color: var(--gold);
-}
 .service__img {
   position: absolute;
   width: 100%;
   height: 100%;
   opacity: 0.56;
-  filter: blur(0) grayscale(0.96) brightness(0.8);
+  filter: grayscale(0.96) brightness(0.8);
   background-color: var(--gold);
 }
 .service--active .service__img,
 .service:hover .service__img {
   opacity: 1;
-  filter: blur(0px) grayscale(0) brightness(1);
+  filter: grayscale(0) brightness(1);
 }
 .center {
   position: absolute;
@@ -345,7 +316,6 @@ a:hover {
   font-size: 1.3rem;
   letter-spacing: 2px;
   font-weight: bold;
-  font-size: 1var (--sm-pad);
   margin: 0.5rem 0;
   opacity: 0.86;
   z-index: 10;
@@ -467,7 +437,6 @@ a:hover {
   grid-template: 1fr 1fr / 1fr;
   justify-content: center;
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
-  padding: 1px;
   width: 100%;
   height: 8rem;
 }
@@ -792,7 +761,7 @@ footer {
     opacity: 0.16;
     transform-origin: right;
   }
-  .nav__links .link{
+  .nav__links .link {
     height: 4rem;
   }
   .menu--chk::before {
@@ -892,6 +861,7 @@ footer {
     grid-auto-flow: row;
     grid-template: 1fr 1fr / 1fr;
     grid-gap: 0;
+    background-color: rgba(0, 0, 0, 0.192);
   }
   .member {
     clip-path: none !important;
@@ -907,7 +877,7 @@ footer {
     padding-bottom: 2rem;
   }
   .member__details::before {
-    top: -200%;
+    top: -220%;
     left: -4rem;
     height: 400%;
     width: 300%;
