Initialized enquiry modal

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -134,6 +134,10 @@ a:hover {
   outline: none;
   cursor: pointer;
   text-transform: uppercase;
+  filter: brightness(1);
+}
+.btn:hover {
+  filter: brightness(0.86);
 }
 .btn--primary {
   background-color: var(--gold);
@@ -270,20 +274,27 @@ a:hover {
   box-shadow: var(--yellow-shadow);
   z-index: 1;
 }
-.service::before {
+.service::before,
+.service::after {
   content: "";
   width: 100%;
   height: 100%;
   background-color: transparent;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  opacity: 0.5;
   background-color: var(--navy);
-  border: 4px solid var(--navy);
-
-  opacity: 0.56;
-  z-index: 10;
+  transition: all ease-in-out 400ms;
+  border-left: 100px solid var(--navy);
+  border-right: 10px solid var(--purple);
+  z-index: 1;
+}
+.service::before {
+  width: 170%;
+  transform: skew(-45deg) translateX(-10%);
+}
+.service:hover::before {
+  width: 200%;
+  transform: skew(0deg) translateX(0);
 }
 .service--active .service__name,
 .service:hover .service__name {
@@ -304,6 +315,8 @@ a:hover {
 }
 .center {
   position: absolute;
+  width: 100%;
+  height: 100%;
   translate: translate(-50%, -50%);
   z-index: 10;
   display: flex;
@@ -312,16 +325,19 @@ a:hover {
   justify-content: center;
 }
 .service__name {
+  position: relative;
   color: yellow !important;
   text-transform: uppercase;
   font-size: 1.2rem;
   font-weight: 700;
   opacity: 0.76;
-  z-index: 10;
+  z-index: 12;
 }
 .service--more {
-  width: 5rem;
+  width: 40%;
   margin-top: 2rem;
+  display: flex;
+  justify-content: center;
   text-align: center;
   font-size: 1rem;
   opacity: 0;
@@ -378,11 +394,15 @@ a:hover {
   filter: grayscale(0.6) brightness(40%);
   z-index: -1;
 }
+.member:first-child {
+  width: 110%;
+  z-index: 2;
+}
 .member:nth-of-type(odd) {
   clip-path: polygon(0 0, 100% 0, 80% 100%, 0 100%);
 }
 .member:nth-of-type(even) {
-  margin-left: -30%;
+  margin-left: -15%;
   clip-path: polygon(20% 0, 100% 0, 100% 100%, 0 100%);
 }
 .team--card:hover .member:not(:hover) {
@@ -447,9 +467,6 @@ a:hover {
   padding: 0;
   text-indent: 16px;
   border-bottom: none;
-}
-.input:not(:placeholder-shown) {
-  background-color: red;
 }
 .form__submit {
   outline: none;
@@ -653,6 +670,7 @@ details[open] summary ~ * {
   opacity: 0.16;
   z-index: -1;
 }
+/* FOOTER */
 footer {
   position: sticky;
   width: 100%;
@@ -687,11 +705,16 @@ footer {
 .footer__item {
   margin: 0.1rem 0;
 }
+
+/* MODAL AND POPUPS */
 .modal {
+  /* safe width */
+  --w: calc(100vw - var(--mn-pad) * 2);
+
   position: fixed;
   top: 50%;
   left: 50%;
-  width: calc(100vw - var(--mn-pad) * 6);
+  width: calc(var(--w) - var(--mn-pad) * 4);
   height: 60vh;
   background-color: var(--light);
   padding: var(--sm-pad);
@@ -699,6 +722,14 @@ footer {
 
   border: none;
   transform: translate(-50%, -50%);
+}
+.modal--enquiry {
+  width: var(--w);
+  height: 80vh;
+}
+.modal--enquiry .btn {
+  width: 10rem;
+  height: 5rem;
 }
 .modal:not([open]) {
   opacity: 0;
@@ -719,7 +750,7 @@ footer {
 .modal__head {
   text-align: left;
 }
-/* Region: Mobile */
+/* REGION: Mobile */
 @media screen and (max-width: 678px) {
   :root {
     --mn-pad: 6vw;
@@ -923,5 +954,18 @@ footer {
   to {
     opacity: 1;
     margin-top: 0;
+  }
+}
+/* States */
+.hasError {
+  box-shadow: 0 0 16px 4px rgba(0, 0, 0, 0.16);
+  animation: nah 100ms ease-in-out;
+}
+@keyframes nah {
+  from {
+    transform: scale(1) translateX(-5px);
+  }
+  to {
+    transform: scale(1.01) translateX(5px);
   }
 }
