--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,8 +143,11 @@ a:hover {
   background-color: var(--gold);
 }
 .btn--modal {
+  display: grid;
+  place-content: center;
   background-color: var(--navy);
   color: var(--gold);
+  margin-top: 2rem;
 }
 .btn--modal:hover {
   opacity: 0.86;
@@ -450,6 +453,8 @@ a:hover {
   height: 65vh;
   flex-direction: column;
 }
+/* FORM FIELDS */
+
 .form {
   position: relative;
   margin-top: 2rem;
@@ -460,21 +465,38 @@ a:hover {
   width: 100%;
   height: 8rem;
 }
+.form__field {
+  display: grid;
+  grid-gap: 8px;
+  margin-bottom: 1rem;
+  border: none;
+  outline: none;
+}
+.checkbox {
+  position: absolute;
+}
 .input {
+  width: 100%;
+  height: 4rem;
   outline: none;
   border: none;
   margin: 0;
-  padding: 0;
-  text-indent: 16px;
+  padding: 8px;
+  text-indent: 8px;
   border-bottom: none;
+}
+.input--area {
+  padding-top: 16px;
+  height: 12rem;
 }
 .form__submit {
   outline: none;
   border: none;
   margin: 0;
   padding: 0;
-  height: 100%;
+  height: 4rem;
   width: 100%;
+  background-color: var(--gold);
   border-top: none;
 }
 .header-text {
@@ -727,10 +749,21 @@ footer {
   width: var(--w);
   height: 80vh;
 }
-.modal--enquiry .btn {
+.modal__input {
+  background-color: var(--base);
+}
+.enquiry__form {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: var(--light);
+  padding: inherit;
+  padding-bottom: 10rem;
+}
+/* .modal--enquiry .btn {
   width: 10rem;
   height: 5rem;
-}
+} */
 .modal:not([open]) {
   opacity: 0;
 }
