--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -143,6 +143,8 @@ a:hover {
   background-color: var(--gold);
 }
 .btn--modal {
+  width: 100%;
+  height: 4rem;
   display: grid;
   place-content: center;
   background-color: var(--navy);
@@ -467,10 +469,12 @@ a:hover {
 }
 .form__field {
   display: grid;
-  grid-gap: 8px;
   margin-bottom: 1rem;
   border: none;
   outline: none;
+}
+.label {
+  margin: 8px 0;
 }
 .checkbox {
   position: absolute;
@@ -744,21 +748,31 @@ footer {
 
   border: none;
   transform: translate(-50%, -50%);
+  transform-origin: center;
+  z-index: 9999;
 }
-.modal--enquiry {
+.modal--large {
   width: var(--w);
   height: 80vh;
+}
+.modal--large .enquiry__group:first-child {
+  animation: fadeIn 400ms ease-out reverse;
+}
+.modal--large .enquiry__form {
+  animation: fadeIn 400ms ease-out forwards;
 }
 .modal__input {
   background-color: var(--base);
 }
-.enquiry__form {
+.enquiry__group {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  width: inherit;
+  height: inherit;
   background-color: var(--light);
   padding: inherit;
-  padding-bottom: 10rem;
+}
+.enquiry__form {
+  display: none;
 }
 /* .modal--enquiry .btn {
   width: 10rem;
@@ -979,12 +993,26 @@ footer {
     display: none;
   }
 }
+/* STATE AND ANIMATION */
+.show {
+  display: block;
+  z-index: 10;
+  animation: fadeIn 400ms ease-out forwards;
+}
+.fade-in {
+  animation: fadeIn 400ms ease-out forwards;
+}
+.fade-out {
+  animation: fadeIn 400ms ease-out reverse;
+}
 @keyframes fadeIn {
   from {
+    z-index: 0;
     opacity: 0;
     margin-top: 3rem;
   }
   to {
+    z-index: 2;
     opacity: 1;
     margin-top: 0;
   }
