--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,6 +13,19 @@
   --yellow-shadow: 0 0 24px 10px rgba(255, 191, 40, 0.527);
 }
 
+::-webkit-scrollbar {
+  width: 4px;
+  background-color: var(--base);
+}
+
+::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: var(--base);
+}
+::-webkit-scrollbar-thumb {
+  background-color: var(--navy);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -113,6 +126,7 @@ a:hover {
 .logo {
   position: relative;
   background-color: transparent !important;
+  padding-left: 0 !important;
   z-index: 1;
 }
 .logo:hover {
@@ -829,8 +843,8 @@ footer {
     position: absolute;
     top: 0;
     left: calc(var(--mn-pad) * -1);
-    width: 35vw;
-    height: 28vw;
+    width: 38vw;
+    height: 30vw;
     clip-path: polygon(0 0, 100% 0, 0 100%);
     background-color: var(--op--light);
     z-index: -1;
