--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -164,16 +164,23 @@ a:hover {
 .btn--primary {
   background-color: var(--gold);
 }
+.btn--fill {
+  color: var(--gold) !important;
+  background-color: var(--navy);
+}
 .btn--modal {
   width: 100%;
   height: 4rem;
   display: grid;
   place-content: center;
-  background-color: var(--navy);
-  color: var(--gold);
+  color: var(--navy);
+  font-weight: bold;
   margin-top: 2rem;
+  z-index: 2;
 }
 .btn--modal:hover {
+  color: var(--gold);
+  background-color: var(--navy);
   opacity: 0.86;
 }
 .link {
@@ -576,6 +583,7 @@ a:hover {
   color: var(--gold);
 }
 .card {
+  position: relative;
   background-color: var(--light);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 }
@@ -709,8 +717,8 @@ details[open] summary ~ * {
 }
 .card__img {
   position: absolute;
-  top: -24px;
-  left: -24px;
+  top: -10px;
+  left: -10px;
   width: 110%;
   height: 110%;
   filter: grayscale(0.9) brightness(1.1) blur(1px);
@@ -756,21 +764,24 @@ footer {
 
 /* MODAL AND POPUPS */
 .modal {
-  /* safe width */
+  /* safe width, respect the main container padding*/
   --w: calc(100vw - var(--mn-pad) * 2);
 
   position: fixed;
   top: 50%;
   left: 50%;
-  width: calc(var(--w) - var(--mn-pad) * 4);
-  height: 60vh;
+  width: var(--w);
+  height: 85vh;
   background-color: var(--light);
   padding: var(--sm-pad);
-  display: grid;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 
   border: none;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -52%);
   transform-origin: center;
+  overflow: hidden;
   z-index: 9999;
 }
 .modal--large {
@@ -783,15 +794,86 @@ footer {
 .modal--large .enquiry__form {
   animation: fadeIn 400ms ease-out forwards;
 }
+.modal > *:not(.modal__list) {
+  z-index: 2;
+}
 .modal__input {
   background-color: var(--base);
 }
+.modal__list {
+  --gap: 2rem;
+  position: relative;
+  width: calc(var(--w) + var(--sm-pad));
+  margin-left: calc(var(--sm-pad) * -1);
+  display: none;
+  flex-wrap: nowrap;
+  overflow: hidden;
+  overflow-x: scroll;
+  padding: 1rem;
+  padding-left: var(--sm-pad);
+  list-style: none;
+
+}
+.list-fade {
+  content: "";
+  position: fixed;
+  width: 11vw;
+  height: 100%;
+  background-image: linear-gradient(90deg, #fff, transparent);
+  top: 30%;
+  left: 0;
+  z-index: 2;
+}
+.btn--outline {
+  align-self: flex-end;
+  width: 100%;
+  border: 2px solid var(--navy);
+  background-color: #fff;
+}
+.btn--close {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  right: var(--sm-pad);
+  right: 0;
+  bottom: 0;
+  display: grid;
+  place-content: center;
+  font-size: 1.5rem;
+  color: var(--navy);
+  padding: 0;
+  margin: 0;
+  z-index: 2;
+}
+.list-fade:last-of-type {
+  left: unset;
+  right: 0;
+  transform: rotate(180deg);
+}
+.modal ::-webkit-scrollbar {
+  height: 4px !important;
+}
+.modal__list .list__item {
+  /* Card width is container width minus the gap between it's siblings all divided by number of cards  */
+  --card-width: calc((var(--w) - var(--gap)) / 4);
+  position: relative;
+  width: var(--card-width);
+  height: 35vh;
+  margin-right: var(--gap);
+  flex-shrink: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+  padding: 36px;
+}
+.modal__list .list__item:last-child {
+  margin-right: 0;
+}
 .enquiry__group {
   position: absolute;
-  width: inherit;
+  width: calc(var(--w) - var(--sm-pad) * 2);
   height: inherit;
   background-color: var(--light);
-  padding: inherit;
 }
 .enquiry__form {
   display: none;
@@ -818,6 +900,11 @@ footer {
 }
 .modal__head {
   text-align: left;
+}
+.modal__text {
+  margin: 0 auto;
+  width: 80%;
+  text-align: center;
 }
 /* REGION: Mobile */
 @media screen and (max-width: 678px) {
@@ -929,6 +1016,9 @@ footer {
   .modal {
     width: 100vw;
     height: 100vh;
+  }
+  .modal__list .list__item {
+    width: calc(var(--card-width) * 3);
   }
   .container--short {
     height: 100vh;
