--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@
 }
 
 ::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
   background-color: var(--base);
 }
 ::-webkit-scrollbar-thumb {
@@ -175,7 +175,8 @@ a:hover {
   place-content: center;
   color: var(--navy);
   font-weight: bold;
-  margin-top: 2rem;
+  margin: 0;
+  margin-top: 1rem;
   z-index: 2;
 }
 .btn--modal:hover {
@@ -779,7 +780,7 @@ footer {
   justify-content: space-between;
 
   border: none;
-  transform: translate(-50%, -52%);
+  transform: translate(-50%, -50%);
   transform-origin: center;
   overflow: hidden;
   z-index: 9999;
@@ -804,25 +805,32 @@ footer {
   --gap: 2rem;
   position: relative;
   width: calc(var(--w) + var(--sm-pad));
+  flex-basis: 80%;
   margin-left: calc(var(--sm-pad) * -1);
   display: none;
   flex-wrap: nowrap;
   overflow: hidden;
   overflow-x: scroll;
-  padding: 1rem;
-  padding-left: var(--sm-pad);
+  margin-top: 2rem;
+  padding-left: calc(var(--sm-pad));
+  margin-left: calc(var(--sm-pad) * -1);
   list-style: none;
-
 }
-.list-fade {
+.modal__list::before,
+.modal__list::after {
   content: "";
   position: fixed;
-  width: 11vw;
+  width: 10vw;
   height: 100%;
   background-image: linear-gradient(90deg, #fff, transparent);
   top: 30%;
   left: 0;
   z-index: 2;
+}
+.modal__list::after {
+  left: unset;
+  right: 0;
+  transform: rotate(180deg);
 }
 .btn--outline {
   align-self: flex-end;
@@ -845,13 +853,12 @@ footer {
   margin: 0;
   z-index: 2;
 }
-.list-fade:last-of-type {
-  left: unset;
-  right: 0;
-  transform: rotate(180deg);
-}
 .modal ::-webkit-scrollbar {
-  height: 4px !important;
+  height: 1rem !important;
+}
+.modal ::-webkit-scrollbar-thumb {
+  cursor: grab;
+  background-color: var(--base);
 }
 .modal__list .list__item {
   /* Card width is container width minus the gap between it's siblings all divided by number of cards  */
@@ -867,11 +874,11 @@ footer {
   padding: 36px;
 }
 .modal__list .list__item:last-child {
-  margin-right: 0;
+  margin-right: var(--card-width);
 }
 .enquiry__group {
   position: absolute;
-  width: calc(var(--w) - var(--sm-pad) * 2);
+  width: calc(var(--w) - var(--sm-pad));
   height: inherit;
   background-color: var(--light);
 }
