--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -203,7 +203,7 @@ a:hover {
   z-index: 2;
 }
 .nav--up {
-  background-color: var(--light);
+  background-color: rgba(255, 255, 255, 0.86);
   box-shadow: 0 0 6px rgba(0, 0, 0, 0.16);
 }
 
@@ -224,6 +224,8 @@ a:hover {
   position: sticky;
   width: 100%;
   height: 100vh;
+  max-width: 1920px;
+  margin: 0 auto;
   background-color: var(--base);
   display: flex;
   padding: var(--sm-pad) var(--mn-pad);
